src/objects/SBQQ__QuoteLineConsumptionSchedule__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__BillingTermUnit__c</fullName>
        <inlineHelpText>The unit used with the billing term to determine the billing frequency.</inlineHelpText>
        <label>Billing Term Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingTerm__c</fullName>
        <inlineHelpText>The number used with the billing term unit to determine the billing frequency.</inlineHelpText>
        <label>Billing Term</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConsumptionSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumption Schedule</label>
        <referenceTo>ConsumptionSchedule</referenceTo>
        <relationshipLabel>Quote Line Consumption Schedules</relationshipLabel>
        <relationshipName>QuoteLineConsumptionSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__MatchingAttribute__c</fullName>
        <inlineHelpText>Usage is matched with a consumption schedule if the records share the same Matching Attribute value.</inlineHelpText>
        <label>Matching Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <label>QuoteLine Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Quote Line Consumption Schedules</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__RatingMethod__c</fullName>
        <inlineHelpText>Choose a specific use case to rate usage against this schedule. This is a controlling picklist for the Type field.</inlineHelpText>
        <label>Rating Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <inlineHelpText>Range: The schedule prices only using the tier that applies to the usage quantity. Slab: Usage within a given bound receives pricing equal to its tier&apos;s value</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UnitOfMeasure__c</fullName>
        <inlineHelpText>Usage quantities and rates apply to this unit of measurement.</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Line Consumption Schedule</label>
    <nameField>
        <label>Consumption Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Consumption Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>